added rake task to update database

--- a/persnickity_app/app/views/restaurants/_form.html.erb
+++ b/persnickity_app/app/views/restaurants/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :zip %>
-    <%= f.number_field :zip %>
+    <%= f.label :zip_code %>
+    <%= f.number_field :zip_code %>
   </div>
 
   <div class="actions">
