--- a/persnickity_app/app/views/restaurants/show.html.erb
+++ b/persnickity_app/app/views/restaurants/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Zip:</strong>
-  <%= @restaurant.zip %>
+  <%= @restaurant.zip_code %>
 </p>
 
 <%= link_to 'Edit', edit_restaurant_path(@restaurant) %> |
