--- a/persnickity_app/app/views/restaurants/index.html.erb
+++ b/persnickity_app/app/views/restaurants/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= restaurant.name %></td>
         <td><%= restaurant.grade %></td>
-        <td><%= restaurant.zip %></td>
+        <td><%= restaurant.zip_code %></td>
         <td><%= link_to 'Show', restaurant %></td>
         <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
         <td><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
