updated carousel captions and started writing additional content

--- a/persnickity_app/app/views/shared/_navigation.html.erb
+++ b/persnickity_app/app/views/shared/_navigation.html.erb
@@ -3,9 +3,9 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/"> <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>//Slanted Walls</a>
+      <a class="navbar-brand" href="/"> /<span class="glyphicon glyphicon-glass" aria-hidden="true", style="font-size: 18px" ></span>/ Slanted Walls</a>
     </div>
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right", style="font-size: 18px">
           <li role="presentation"><a href="#">Home</a></li>
           <li role="presentation"><a href="#">Login</a></li>
           <li role="presentation"><a href="#">Sign Up</a></li>
