--- a/persnickity_app/app/views/static/new.html.erb
+++ b/persnickity_app/app/views/static/new.html.erb
@@ -11,26 +11,26 @@
   <div class="carousel-inner" role="listbox" style="height: 480px">
     <div class="item active">
       <%= image_tag 'coffee.jpeg' %>
-      <div class="carousel-caption" style="top: 45%">
-        <h2> 14-1.171 Walls must be straight and smooth</h2>
+      <div class="carousel-caption" style="top: 30%">
+        <h1> 14-1.171 Walls must be straight and smooth</h1>
         <h4>Not all Grades are created equal.</h4>
       </div>
     </div>
 
     <div class="item">
-      <%= image_tag 'food.jpg' %>
-        <div class="carousel-caption" style="top: 40%">
-          <h2>What's Important to You?</h2>
-          <h4>Find the Grade that matters to you.</h4>
-        </div>
+      <%= image_tag 'restaurant.jpg' %>
+      <div class="carousel-caption" style="top: 27%">
+        <h1> Are you going to finish that?</h1>
+        <h4> Worry about dessert.  Not your food.</h4>
+      </div>
     </div>
 
     <div class="item">
-      <%= image_tag 'restaurant.jpg' %>
-      <div class="carousel-caption" style="top: 40%">
-        <h2> Are you going to finish that?</h2>
-        <h4> Worry about dessert.  Not your food.</h4>
-      </div>
+      <%= image_tag 'food.jpeg' %>
+        <div class="carousel-caption" style="top: 30%">
+          <h1>What happens to your plate before you eat?</h1>
+          <h4>Find the Grade that matters to you.</h4>
+        </div>
     </div>
   </div>
 
@@ -44,10 +44,21 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+<br>
+<br>
+  <!-- Start of Information -->
+<div class="container text-center">
+  <h3>What does a Grade A rating <b><em>really</b></em> mean?</h3>
+  <div class="row" style="line-height: 1em">
+    <p>There are more than 24,000 eating establishments in NYC. </p>
+    <p>How many of them have a Grade A inspection rating? </p>
+    <p>Do these ratings even <b>matter?</b>  Slanted Walls is here to answer.</p>
+    <br>
+    <br>
+    <h3>Search Restaurant</h3>
+    </div>
 
-
-<div id="main-container" class="container">
-  <div class="row">
-
+    </p>
+  </div>
   </div>
 </div>
