--- a/persnickity_app/app/assets/stylesheets/application.css.sass
+++ b/persnickity_app/app/assets/stylesheets/application.css.sass
@@ -18,13 +18,6 @@
 @import "bootstrap-sprockets"
 @import "bootstrap"
 
-nav
-  font-size: 20px
 
-navbar
-  font-size: 20px
-  // background-color: #66ccff
-
-carousel
-  width: 640px
-  height: 150px
+container
+  padding: 80px 120px
