--- a/persnickity_app/app/views/restaurants/index.html.erb
+++ b/persnickity_app/app/views/restaurants/index.html.erb
@@ -7,7 +7,10 @@
     <tr>
       <th>Name</th>
       <th>Grade</th>
-      <th>Zip</th>
+      <th>Zip Code</th>
+      <th>Cuisine</th>
+      <th>Phone</th>
+      <th>Address</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +21,9 @@
         <td><%= restaurant.name %></td>
         <td><%= restaurant.grade %></td>
         <td><%= restaurant.zip_code %></td>
+        <td><%= restaurant.cuisine %></td>
+        <td><%= restaurant.phone %></td>
+        <td><%= restaurant.address %></td>
         <td><%= link_to 'Show', restaurant %></td>
         <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
         <td><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
