--- a/persnickity_app/app/views/accounts/index.html.erb
+++ b/persnickity_app/app/views/accounts/index.html.erb
@@ -6,8 +6,8 @@
   <thead>
     <tr>
       <th>User name</th>
-      <th>Password digest</th>
       <th>Email</th>
+      <th>ID</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,11 +16,10 @@
     <% @accounts.each do |account| %>
       <tr>
         <td><%= account.user_name %></td>
-        <td><%= account.password_digest %></td>
         <td><%= account.email %></td>
+        <td><%= account.id %></td>
         <td><%= link_to 'Show', account %></td>
-        <td><%= link_to 'Edit', edit_account_path(account) %></td>
-        <td><%= link_to 'Destroy', account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
       </tr>
     <% end %>
   </tbody>
