--- a/persnickity_app/app/assets/stylesheets/application.css.sass
+++ b/persnickity_app/app/assets/stylesheets/application.css.sass
@@ -21,3 +21,21 @@
 
 container
   padding: 80px 120px
+
+.footer
+  background-color: #999
+  color: white
+  padding: 20px
+  margin-top: 30px
+
+.button
+  background-color: #999
+  border: none
+  color: white
+  padding: 10px 25px
+  text-align: center
+  text-decoration: none
+  display: inline-block
+  font-size: 16px
+  margin: 4px 2px
+  cursor: pointer
