--- a/persnickity_app/app/views/shared/_navigation.html.erb
+++ b/persnickity_app/app/views/shared/_navigation.html.erb
@@ -7,7 +7,7 @@
     </div>
       <ul class="nav navbar-nav navbar-right", style="font-size: 18px">
           <li role="presentation"><a href="#">Home</a></li>
-          <li role="presentation"><a href="#">Login</a></li>
+          <li role="presentation"><a href="/login">Login</a></li> <!--possibly remove login and signup options once session is active -->
           <li role="presentation"><a href="#">Sign Up</a></li>
         </ul>
       </ul>
