--- a/persnickity_app/app/assets/stylesheets/application.css.sass
+++ b/persnickity_app/app/assets/stylesheets/application.css.sass
@@ -22,6 +22,13 @@
 container
   padding: 80px 120px
 
+// .navbar
+//   background-color: #999
+//   color: white
+//   padding: 20px
+//   margin-top: 30px
+
+
 .footer
   background-color: #999
   color: white
