--- a/persnickity_app/app/views/restaurants/show.html.erb
+++ b/persnickity_app/app/views/restaurants/show.html.erb
@@ -8,11 +8,25 @@
 <p>
   <strong>Grade:</strong>
   <%= @restaurant.grade %>
-</p>
 
 <p>
   <strong>Zip:</strong>
   <%= @restaurant.zip_code %>
+</p>
+
+<p>
+  <strong>Cuisine:</strong>
+  <%= @restaurant.cuisine %>
+</p>
+
+<p>
+  <strong>Phone:</strong>
+  <%= @restaurant.phone %>
+</p>
+
+<p>
+  <strong>Address:</strong>
+  <%= @restaurant.address %>
 </p>
 
 <%= link_to 'Edit', edit_restaurant_path(@restaurant) %> |
