changed pics to .jpg

--- a/app/views/static/new.html.erb
+++ b/app/views/static/new.html.erb
@@ -10,7 +10,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox" style="height: 480px">
     <div class="item active">
-      <%= image_tag 'coffee.jpeg' %>
+      <%= image_tag 'coffee.jpg' %>
       <div class="carousel-caption" style="top: 30%">
         <h1> 14-1.171 Walls must be straight and smooth</h1>
         <h4>Not all Grades are created equal.</h4>
@@ -26,7 +26,7 @@
     </div>
 
     <div class="item">
-      <%= image_tag 'food.jpeg' %>
+      <%= image_tag 'food.jpg' %>
         <div class="carousel-caption" style="top: 30%">
           <h1>What happens to your plate before you eat?</h1>
           <h4>Find the Grade that matters to you.</h4>
