BUTTONS and rankings

--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,18 +1,25 @@
 
 <div class="container-fluid text-center" style="padding-top:30px">
   <div class="row content">
+
     <div class="col-sm-2 sidenav">
-      <% if @logged_in_account == @account.id %>
-        <p><h3>Hey <%= @account.user_name %>!</h3></p>
-        <br>
-        <p><%= link_to 'Edit Account', edit_account_path(@account) %></p>
-        <p><%= link_to 'Delete Account', @account, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-      <% end %>
+      <h2>Hey <%= @account.user_name %>!</h2>
+      <br>
+
+      <div class="btn-group">
+          <%= link_to 'Edit Account', edit_account_path(@account), class:"button" %>
+          <%= link_to 'Delete Account', @account, method: :delete, data: { confirm: 'Are you sure?' }, class:"button" %>
+          <%= link_to 'Browse Neighborhoods', neighborhoods_path, class:"button" %>
+      </div>
+
+
+
     </div>
+
     <div class="col-sm-8 text-left">
       <p id="notice"><%= notice %></p>
-      <h1>Welcome</h1>
-      <h4>Worst Repeat Offenders in Yo Hood <i><small>regardless of current grade</small></i></h4>
+      <h2>Your Hood is <%= @hood.name %></h2>
+      <h4>Worst Restaurants by Most Recent Inspection</h4>
       <table class="table table-hover table-bordered">
         <thead>
           <tr>
@@ -22,7 +29,7 @@
           </tr>
         </thead>
         <tbody>
-          <% @worst_five.each do |rest| %>
+          <% @hood.get_bottom_five.each do |rest| %>
             <tr>
               <td><%= rest[:name].titleize %></td>
               <td style="text-align:center"><%= rest[:grade] %></td>
@@ -38,7 +45,7 @@
           </tr>
         </thead>
         <tbody>
-          <% @best_five.each do |rest| %>
+          <% @hood.get_top_five.each do |rest| %>
             <tr>
               <td class="col-xs-4"><%= rest[:name].titleize %></td>
               <td class="col-xs-2" style="text-align:center"><%= rest[:grade] %></td>
@@ -48,11 +55,21 @@
         </tbody>
       </table>
       <hr>
-      <h3>Neighborhood Grade Stats</h3>
-      <p>Park Slope has 2.5x as many A's as the New York average</p>
-      <p>Park Slope has 1x as many B's as the New York average</p>
-      <p>Park Slope has .5x as many C's as the New York average</p>
+      <h3>The <%= @hood.name %> has... </h3>
+      <% @rel_grades.each do |hash| %>
+        <% hash.each do |letter, grade| %>
+          <% l = letter.to_s  %>
+          <% if grade == 0 %>
+            <p>No <%= l %>'s!</p>
+          <% elsif grade < 1 %>
+            <p><%= (100-grade*100).round %>% less <%= l %>'s than the New York average</p>
+          <% else %>
+            <p><%= (grade*100-100).round %>% more <%= l %>'s than the New York average</p>
+          <% end %>
+        <% end %>
+      <% end %>
     </div>
+
     <div class="col-sm-2 sidenav">
       <div class="well">
         <p>ADS</p>
@@ -61,5 +78,6 @@
         <p>ADS</p>
       </div>
     </div>
+
   </div>
 </div>
