--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -44,7 +44,9 @@
   <br>
   <div class="form-group">
     <div class="col-xs-offset-2 col-xs-10">
-      <%= f.submit class:"button"%>
+      <div class="btn-group">
+        <%= f.submit class:"button"%>
+      </div>
     </div>
   </div>
 </div>
