--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -7,7 +7,9 @@
 <div class="container" style="padding-left:28%">
   <div class="form-group">
     <div class="col-xs-offset-2 col-xs-10">
-      <%= link_to 'Back', account_path(@account), class:"button" %>
+      <div class="btn-group">
+        <%= link_to 'Back', account_path(@account), class:"button" %>
+      </div>
     </div>
   </div>
 </div>
