hood pics added, jumbotron with dynamic pics added

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -11,7 +11,7 @@
  // * files in this directory. Styles in this file should be added after the last require_* statement.
  // * It is generally better to create a new file per style scope.
  // *
- // *= require_tree .
+ *= require_tree .
  // *= require_self
  /*
 
@@ -86,3 +86,11 @@
 
 .btn-group :hover
   color: #1abc9c !important
+
+$hood_id : "1"
+
+.jumbotron
+  position: relative
+  height: 500px
+  overflow: hidden
+  padding: 0
