--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/jumbo' %>
 
 <div class="container-fluid text-center" style="padding-top:30px">
   <div class="row content">
@@ -5,70 +6,14 @@
     <div class="col-sm-2 sidenav">
       <h2>Hey <%= @account.user_name %>!</h2>
       <br>
-
       <div class="btn-group">
-          <%= link_to 'Edit Account', edit_account_path(@account), class:"button" %>
-          <%= link_to 'Delete Account', @account, method: :delete, data: { confirm: 'Are you sure?' }, class:"button" %>
-          <%= link_to 'Browse Neighborhoods', neighborhoods_path, class:"button" %>
+        <%= link_to 'Edit Account', edit_account_path(@account), class:"button" %>
+        <%= link_to 'Delete Account', @account, method: :delete, data: { confirm: 'Are you sure?' }, class:"button" %>
+        <%= link_to 'Browse Neighborhoods', neighborhoods_path, class:"button" %>
       </div>
-
-
-
     </div>
 
-    <div class="col-sm-8 text-left">
-      <p id="notice"><%= notice %></p>
-      <h2>Your Hood is <%= @hood.name %></h2>
-      <h4>Worst Restaurants by Most Recent Inspection</h4>
-      <table class="table table-hover table-bordered">
-        <thead>
-          <tr>
-            <th class="col-xs-4">Name</th>
-            <th class="col-xs-2" style="text-align:center">Grade</th>
-            <th class="col-xs-3">Address</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @hood.get_bottom_five.each do |rest| %>
-            <tr>
-              <td><%= rest[:name].titleize %></td>
-              <td style="text-align:center"><%= rest[:grade] %></td>
-              <td><%= rest[:address].gsub(" Ave","th Ave").titleize %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-      <h4>And Now the Best Five...</h4>
-      <table class="table table-hover table-bordered">
-        <thead>
-          <tr>
-          </tr>
-        </thead>
-        <tbody>
-          <% @hood.get_top_five.each do |rest| %>
-            <tr>
-              <td class="col-xs-4"><%= rest[:name].titleize %></td>
-              <td class="col-xs-2" style="text-align:center"><%= rest[:grade] %></td>
-              <td class="col-xs-3"><%= rest[:address].titleize %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-      <hr>
-      <h3>The <%= @hood.name %> has... </h3>
-      <% @rel_grades.each do |hash| %>
-        <% hash.each do |letter, grade| %>
-          <% l = letter.to_s  %>
-          <% if grade == 0 %>
-            <p>No <%= l %>'s!</p>
-          <% elsif grade < 1 %>
-            <p><%= (100-grade*100).round %>% less <%= l %>'s than the New York average</p>
-          <% else %>
-            <p><%= (grade*100-100).round %>% more <%= l %>'s than the New York average</p>
-          <% end %>
-        <% end %>
-      <% end %>
-    </div>
+    <%= render 'shared/hood' %>
 
     <div class="col-sm-2 sidenav">
       <div class="well">
