--- a/app/views/neighborhoods/index.html.erb
+++ b/app/views/neighborhoods/index.html.erb
@@ -1,21 +1,29 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Neighborhoods</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Dominant cuisine</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @neighborhoods.each do |neighborhood| %>
-      <tr>
-        <td><%= neighborhood.name %></td>
-        <td><%= link_to 'Show', neighborhood %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="container-fluid text-center" style="padding-top:30px">
+  <div class="row content">
+    <h1>All Neighborhoods</h1>
+    <div class="col-sm-3 sidenav">
+    </div>
+    <div class="col-sm-6 text-left">
+      <table class="table table-hover table-bordered table-condensed">
+        <thead>
+          <tr>
+            <th class="col-xs-1" style="text-align:center">No.</th>
+            <th class="col-xs-4">Name</th>
+            <th class="col-xs-2">Dummy</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @neighborhoods.each do |neighborhood| %>
+          <tr>
+            <td style="text-align:center"><%= link_to neighborhood.id, neighborhood %></td>
+            <td><%= link_to neighborhood.name, neighborhood %></td>
+            <td> dummy </td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-sm-3 sidenav">
+    </div>
+  </div>
+</div>
