Front end stuff changed, rails routes made for 404, controller's changed to catch inaccurate/missing submissions and redirect to 404, 404 created. Maybe a couple other small backend changed? can't remember.

--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -19,7 +19,7 @@
     <img class="img-circle" <%= image_tag "team_pictures/Daniel.png", size: 220%>
     <br>
     <br>
-    <p>An East Coast native, Daniel currently lives in midtown Manhatten where he enjoys algorithm, rock climbing, and is active on HackRank.</p>
+    <p>An East Coast native, Daniel currently lives in midtown Manhatten where he enjoys algorithm, rock climbing, and is active on HackerRank.</p>
     </div>
     <div class="col-sm-3" >
     <h3><strong>Devin</strong></h3><br>
