--- a/app/views/shared/_jumbo.html.erb
+++ b/app/views/shared/_jumbo.html.erb
@@ -1,4 +1,4 @@
 
 <div class="jumbotron" >
-  <%= image_tag "neighborhoods/hood_#{@hood.id}.jpg", class: "img-responsive" %>
+  <%= image_tag "neighborhoods/hood_#{@neighborhood.id}.jpg", class: "img-responsive" %>
 </div>
