--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -7,22 +7,25 @@
       <h2>Neighborhood Browser</h2>
       <br>
       <div class="btn-group">
+        <%= link_to 'My Account', account_path(session[:account_id]), class:"button" %>
         <%= link_to 'All Hoods', neighborhoods_path, class:"button" %>
         <%= link_to 'Previous Hood', neighborhood_path(@neighborhood.id-1), class:"button" %>
         <%= link_to 'Next Hood', neighborhood_path(@neighborhood.id+1), class:"button" %>
+        <%= link_to 'Restuarants', restaurants_path, class:"button" %>
       </div>
     </div>
 
-    <%= render 'shared/hood' %>
+    <div class="col-sm-8 text-left">
+      <p id="notice"><%= notice %></p>
+      <h2>This Hood is <%= @neighborhood.name %></h2>
+      <h4>Worst Restaurants based on Most Recent Inspection</h4>
+      <%= render 'shared/table' %>
+    </div>
 
     <div class="col-sm-2 sidenav">
-      <div class="well">
-        <p>ADS</p>
-      </div>
-      <div class="well">
-        <p>ADS</p>
-      </div>
     </div>
 
   </div>
 </div>
+
+<%= render 'shared/relativesummary' %>
