--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,79 +1,24 @@
-<div id="restaurant_carousel" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="item active">
-      <div class="carousel-inner" style="height:160px">
-        <%= image_tag 'sandwhich.jpg' %>
-       <div class="carousel-caption" style="top:7%">
-         <h1>NYC Restaurant Ratings</h1>
-         <h3><%=@phrases.sample%></h3>
-       </div>
-     </div>
-    </div>
-  </div>
-</div>
+<%= render 'shared/carousel' %>
 
 <div class="container-fluid text-center" style="padding-top:30px">
   <div class="row content">
-    <div class="col-sm-3 sidenav">
-      <p><h3>Pick Your Poison </h3></p>
-      <p><%= image_tag "my-icons-collection/png/#{@badicons.sample}" %></p>
-      <p><%= link_to 'My Account', account_path(session[:account_id]) %></p>
-      <p><%= link_to 'Neighborhoods', neighborhoods_path %></p>
-    </div>
-    <div class="col-sm-8 text-left">
-      <h2>NYC Worst Offenders</h2>
-      <table class="table table-hover table-bordered">
-        <thead>
-          <tr>
-            <th class="col-xs-3">Name</th>
-            <th class="col-xs-1" style="text-align:center">Grade</th>
-            <th class="col-xs-1" style="text-align:center">Score</th>
-            <th class="col-xs-1">Cuisine</th>
-            <th class="col-xs-3">Neighborhood</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @worst_five.each do |rest| %>
-            <tr>
-              <td> <%= image_tag "my-icons-collection/png/#{@badicons.sample}" %>  <%= link_to "#{rest.name.titleize}",rest %> </td>
-              <td style="text-align:center"><%= rest.grade %></td>
-              <td style="text-align:center"><%= rest.score %></td>
-              <td><%= rest.cuisine.titleize %></td>
-              <td><%= link_to "#{Neighborhood.find(rest.neighborhood_id).name.titleize}", neighborhood_path(rest.neighborhood_id)%></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
 
-      <h2>These Should be Cool</h2>
-      <table class="table table-hover table-bordered">
-        <thead>
-          <tr>
-            <th class="col-xs-3">Name</th>
-            <th class="col-xs-1" style="text-align:center">Grade</th>
-            <th class="col-xs-1" style="text-align:center">Score</th>
-            <th class="col-xs-1">Cuisine</th>
-            <th class="col-xs-3">Neighborhood</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @best_five.each do |rest| %>
-          <tr>
-            <td><%= image_tag "my-icons-collection/goodicons/#{@goodicons.sample}" %> <%= link_to "#{rest.name.titleize}",rest%> </td>
-            <td style="text-align:center"><%= rest.grade %></td>
-            <td style="text-align:center"><%= rest.score %></td>
-            <td><%= rest.cuisine.titleize %></td>
-            <td><%= link_to "#{Neighborhood.find(rest.neighborhood_id).name.titleize}", neighborhood_path(rest.neighborhood_id) %></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+    <div class="col-sm-2 sidenav">
+      <h2>Pick Your Poison</h2>
+      <div class="btn-group">
+        <%= link_to 'My Account', account_path(session[:account_id]), class:"button" %>
+        <%= link_to 'Neighborhoods', neighborhoods_path, class:"button" %>
+      </div>
     </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-8">
-    <h3>Total Grade Distribution</h3>
-    <%= bar_chart @restaurants.group(:grade).count %>
+
+
+    <div class="col-sm-8 text-left">
+      <h2>NYC's Worst Offenders</h2>
+      <%= render 'shared/table' %>
+      <br>
+      <h3>Total Grade Distribution</h3>
+      <%= bar_chart @restaurants.group(:grade).count %>
+    </div>
+
   </div>
 </div>
