--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -10,7 +10,7 @@
         <%= link_to 'Edit Account', edit_account_path(@account), class:"button" %>
         <%= link_to 'Delete Account', @account, method: :delete, data: { confirm: 'Are you sure?' }, class:"button" %>
         <%= link_to 'Neighborhoods', neighborhoods_path, class:"button" %>
-        <%= link_to 'Restuarants', restaurants_path, class:"button" %>
+        <%= link_to 'Restaurants', restaurants_path, class:"button" %>
       </div>
     </div>
 
