--- a/app/views/neighborhoods/index.html.erb
+++ b/app/views/neighborhoods/index.html.erb
@@ -8,7 +8,7 @@
       <br>
       <div class="btn-group">
         <%= link_to 'My Account', account_path(session[:account_id]), class:"button" %>
-        <%= link_to 'Restuarants', restaurants_path, class:"button" %>
+        <%= link_to 'Restaurants', restaurants_path, class:"button" %>
       </div>
     </div>
     <div class="col-xs-8 text-left">
