--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -11,7 +11,7 @@
         <%= link_to 'All Hoods', neighborhoods_path, class:"button" %>
         <%= link_to 'Previous Hood', neighborhood_path(@neighborhood.id-1), class:"button" %>
         <%= link_to 'Next Hood', neighborhood_path(@neighborhood.id+1), class:"button" %>
-        <%= link_to 'Restuarants', restaurants_path, class:"button" %>
+        <%= link_to 'Restaurants', restaurants_path, class:"button" %>
       </div>
     </div>
 
