--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -2,7 +2,7 @@
   <div class="carousel-inner">
     <div class="item active">
       <div class="carousel-inner" style="height:160px">
-        <%= image_tag 'sandwhich.jpg' %>
+        <%= image_tag 'sandwhich.jpg', style:"width:100%" %>
        <div class="carousel-caption" style="top:7%">
          <h1>NYC Restaurant Ratings</h1>
          <h3><%=@phrases.sample%></h3>
