--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -5,6 +5,7 @@
       <a class="navbar-brand" href="/"> /<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>/ Slanted Walls</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
+      <li><%= render 'shared/search' %></li>
       <% if session[:account_id] %>
         <li role="presentation"><a href="/accounts/<%= session[:account_id] %>">My Account</a></li>
         <li role="presentation"><%= link_to 'Logout', logout_path, :method => :delete%></a></li>
