--- a/app/views/static/new.html.erb
+++ b/app/views/static/new.html.erb
@@ -49,13 +49,48 @@
 <br>
   <!-- Start of Information -->
 <div class="container text-center">
-  <h3>What does a Grade A rating <b><em>really</b></em> mean?</h3>
-  <div class="row" style="line-height: 1em">
-    <p>There are more than 24,000 eating establishments in NYC. </p>
-    <p>How many of them have a Grade A inspection rating? </p>
-    <p>Do these ratings even <b>matter?</b>  Slanted Walls is here to answer.</p>
-    <br>
-    <br>
-    <h3>Search Restaurant</h3>
+  <h1>What does a Grade A rating <b><em>really</b></em> mean?</h1>
+  <br>
+  <div class="row" style="text-center">
+    <div class="col-sm-2 sidenav_holder">
+    </div>
+    <div class="col-sm-10 graph_text_holder">
+      <div class="col-sm-5">
+        <h3>Most NYC eateries get an: </h3>
+        <h2><strong>A rating</strong></h2>
+        <%= image_tag "my-icons-collection/goodicons/030-leaf.png" %>
+        <br>
+        <br>
+        <h4>But restaurants can have up to 14 violations and <u>still get an A.</u></h4>
+        <h4>Violations can include:</h4>
+        <br>
+        <ul class="text-left">
+          <li> <%= image_tag "my-icons-collection/png/017-animals.png" %>  Evidence mice and vermin </li>
+          <li> <%= image_tag "my-icons-collection/png/014-big-bug.png" %>  Live roaches in food and facility</li>
+          <li> <%= image_tag "my-icons-collection/png/013-garbage.png" %>  Food and storage contamination </li>
+          <li> <%= image_tag "my-icons-collection/png/005-bacteria.png" %>  Soiled cleaning equipment </li>
+        </ul>
+      </div>
+      <div class="col-sm-7 graph_holder">
+      <%= pie_chart @pie_chart %>
+      </div>
     </div>
   </div>
+  <br>
+  <div class="row" style="text-center">
+    <h2>Say Hello to Persnickity Walls</h2>
+    <h4>See what matters to you and nothing else</h5>
+    <br>
+    <div class="col-sm-12">
+      <div class="col-sm-4 placeholder">
+      </div>
+      <div class="col-sm-8 table">
+        <ul class="list-unstyled">
+         <li>View over 40,000 violations across multiple years</li>
+         <li>Compare scores for over 2,000 restaurants and 40 neighborhoods</li>
+         <li>Review critical vs. non-critical violations and decide for yourself</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
