--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,7 @@
         <a class="footer-brand" href="/about"><span style="color:white; padding-left:50px">About Us</span></a>
       </div>
       <div class="col-xs-8 text-center">
-        <a class="footer-brand" href="/"><span class="glyphicon glyphicon-glass" aria-hidden="true", style="font-size: 18px; color:white" ></span><span style="color:white"> Slanted Walls</span></a>
+        <a class="footer-brand" href="/"><span class="glyphicon glyphicon-glass" aria-hidden="true", style="font-size: 18px; color:white" ></span><span style="color:white"> Persnickity Walls</span></a>
       </div>
       <div class="col-xs-2 text-center">
         <a class="footer-brand" href="/contact"><span style="color:white; padding-right:50px">Contact</span></a>
