--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/"> /<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>/ Slanted Walls</a>
+      <a class="navbar-brand" href="/"> <span class="glyphicon glyphicon-glass" aria-hidden="true"></span> Persnickity Walls</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
       <li><%= render 'shared/search' %></li>
